<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mechagon Trail</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>
    <string name="about">About</string>
    <string name="title_activity_about">About</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="about_content">Mechagon Trail is a class project inspired by Oregon Trail.\n
        Dos Los Muertos is:\n
        Will DeVries\n
        Brian Szaroletta\n
        Drew Radford\n
        Evelyn Adler</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Action settings</string>

    <string name="story">In Mechagon Trail, you and a group of 4 other pilots navigate a mech through space to find a mythical fuel source.
        You control the head while your pilot team controls the limbs - one per pilot.</string>
    <string name="story_header">The Story of Mechagon Trail</string>
    <string name="cont">Continue</string>

    <string name="submit">Submit</string>

    <string name="initial_data_entry">Party info:</string>
    <string name="head_name">Head pilot\'s name:</string>
    <string name="left_arm_name">Left arm pilot\'s name:</string>
    <string name="right_arm_name">Right arm pilot\'s name:</string>
    <string name="left_leg_name">Left leg pilot\'s name:</string>
    <string name="right_leg_name">Right leg pilot\'s name:</string>

    <string name="about_back">Back</string>
    <string name="title_activity_dummy_fullscreen">DummyFullscreenActivity</string>
    <string name="title_activity_new_game_story">NewGameStory</string>
    <string name="title_activity_new_game_info_screen">NewGameInfoScreen</string>

    <string name="title_activity_data_pass_test">DataPassTest</string>
    <string name="title_activity_battle_screen">battleScreen</string>

    <string name="title_activity_load_game_test">loadGameTest</string>

    <string name="title_activity_eventhappening">eventhappening</string>
    <string name="title_activity_game_loop">GameLoop</string>

    <string name="title_activity_shop_screen">ShopScreen</string>

    <string name="title_activity_buy_item_avtivity">BuyItemAvtivity</string>

    <string name="title_activity_buy_item">BuyItemActivity</string>

    <string name="title_activity_repair_mech">RepairMechActivity</string>

    <string name="title_activity_upgrade_mech">UpgradeMechActivity</string>

</resources>
