<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff000000"
    tools:context=".TitleScreen"
    android:rowCount="14"
    android:columnCount="10"
    android:id="@+id/fullscreen_content">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/TitleTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
    />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:id="@+id/new_game_button"
        android:layout_above="@+id/load_game_button"
        android:layout_alignStart="@+id/about_button"
        android:layout_centerHorizontal="true"
        android:clickable="true"
    />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/load_game"
        android:id="@+id/load_game_button"
        android:layout_marginTop="15dp"
        android:layout_above="@+id/about_button"
        android:layout_alignLeft="@+id/new_game_button"
        android:clickable="false"
    />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:id="@+id/about_button"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
    />
</RelativeLayout>
